--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="assets/image/bia_1.png" alt="">
         </div>
         <div id="resultado">
-            <input type="text" id="txtpalp">
+            <input type="text" id="txtpalp" onkeypress="enviar()">
             <p>Seus palpites:</p>
             <p id="lista-palp"></p>
         </div>
