style: mudando alguns estilos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="bia-pensa">
             <h1>Em que número <span>Bia</span> está pensando?</h1>
-            <img src="assets/image/bia_1.png" alt="">
+            <img src="assets/image/bia_1.png" id="bia">
         </div>
         <div id="resultado">
             <input type="text" id="txtpalp" onkeypress="enviar()">
