criando botão dinamicamente por js

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <div id="bia-pensa">
             <h1>Em que número <span>Bia</span> está pensando?</h1>
             <img src="assets/image/bia_1.png" id="bia">
         </div>
-        <div id="resultado">
+        <div class="input-palp" id="input">
             <input type="text" id="txtpalp" onkeypress="enviar()">
-            <p>Seus palpites:</p>
+        </div>
+        <div class="palpites">            
+            <h3>Seus palpites:</h3>
             <p id="lista-palp"></p>
         </div>
     </div>
