fix: mensagem de ajuda

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div class="input-palp" id="input">
             <input type="text" id="txtpalp" onkeypress="enviar()">
+            <p id="enter">Aperte Enter para mandar o palpite</p>
         </div>
         <div class="palpites">            
             <h3>Seus palpites:</h3>
